--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "epitech experience nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/TTENSHII/Ayame/issues"
   },
-  "homepage": "https://github.com/TTENSHII/Ayame#readme"
+  "homepage": "https://github.com/TTENSHII/Ayame#readme",
+  "dependencies": {
+    "@discordjs/builders": "^0.15.0",
+    "@discordjs/rest": "^0.5.0",
+    "discord-api-types": "^0.33.5",
+    "discord.js": "^13.8.0",
+    "dotenv": "^16.0.1"
+  }
 }
