--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
   "dependencies": {
     "@discordjs/builders": "^0.15.0",
     "@discordjs/rest": "^0.5.0",
+    "@discordjs/voice": "^0.10.0",
     "axios": "^0.27.2",
     "discord-api-types": "^0.33.5",
     "discord.js": "^13.8.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^4.4.1",
+    "libsodium-wrappers": "^0.7.10",
+    "ytdl": "^1.4.1"
   }
 }
